🚨 HOTFIX: Simplify Change Detection Script
❌ Fixed CI Pipeline Failure:
- Simplified bash script syntax to avoid errors
- Removed complex conditional logic that was causing failures
- Added fallback || echo '0' to handle empty grep results
- Used simple pattern matching instead of complex if-then logic
- Cleaner variable assignments and comparisons

🔧 Changes:
- Direct grep | wc -l with fallback for reliability
- Standard [ ] test syntax instead of complex conditionals
- Removed debug output that might have caused issues

This should fix the pipeline failure and get CI working again! 🚀

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,24 +33,17 @@ jobs:
         id: check-files
         run: |
           # Get list of changed files
-          CHANGED_FILES=$(git diff --name-only HEAD^ HEAD)
           echo "Files changed:"
-          echo "$CHANGED_FILES"
+          git diff --name-only HEAD^ HEAD
           
-          # Count frontend changes (more explicit patterns)
-          FRONTEND_CHANGES=0
-          if echo "$CHANGED_FILES" | grep -E '^apps/' > /dev/null; then
-            FRONTEND_CHANGES=$(echo "$CHANGED_FILES" | grep -E '^apps/' | wc -l)
-          fi
+          # Simple pattern matching with fallback
+          FRONTEND_CHANGES=$(git diff --name-only HEAD^ HEAD | grep '^apps/' | wc -l || echo "0")
+          BACKEND_CHANGES=$(git diff --name-only HEAD^ HEAD | grep '^backend/' | wc -l || echo "0")
           
-          # Count backend changes
-          BACKEND_CHANGES=0
-          if echo "$CHANGED_FILES" | grep -E '^backend/' > /dev/null; then
-            BACKEND_CHANGES=$(echo "$CHANGED_FILES" | grep -E '^backend/' | wc -l)
-          fi
+          # Check for package.json changes
+          PACKAGE_CHANGES=$(git diff --name-only HEAD^ HEAD | grep -E '(package\.json|pnpm-lock\.yaml)$' | wc -l || echo "0")
           
-          # Also check for package.json changes (affects both)
-          if echo "$CHANGED_FILES" | grep -E '(package\.json|pnpm-lock\.yaml)$' > /dev/null; then
+          if [ "$PACKAGE_CHANGES" -gt 0 ]; then
             echo "Package files changed - triggering both frontend and backend"
             FRONTEND_CHANGES=$((FRONTEND_CHANGES + 1))
             BACKEND_CHANGES=$((BACKEND_CHANGES + 1))
@@ -61,12 +54,6 @@ jobs:
 
           echo "Frontend changes detected: ${FRONTEND_CHANGES}"
           echo "Backend changes detected: ${BACKEND_CHANGES}"
-          
-          # Debug: Show which files matched which patterns
-          echo "Frontend files:"
-          echo "$CHANGED_FILES" | grep -E '^apps/' || echo "None"
-          echo "Backend files:"
-          echo "$CHANGED_FILES" | grep -E '^backend/' || echo "None"
 
   build-and-test:
     name: "🧪 Build and Test"
