🔧 Fix Docker Build Condition - Frontend Changes Detection
✅ Fixed Docker Build Job:
- Corrected condition to use 'frontend-tests' output (matches job outputs definition)
- Fixed debug output to show correct variable names
- Docker build will now run when:
  1. build-and-test job succeeds ✅
  2. On main branch ✅
  3. Frontend files changed (frontend-tests > 0) ✅

The outputs mapping was:
- changed-files outputs: frontend-tests, backend-tests
- step outputs: frontend, backend
- Docker condition now correctly uses: frontend-tests

This should make the Docker build trigger when frontend files change!

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,8 +151,8 @@ jobs:
 
       - name: Debug - Show change detection results
         run: |
-          echo "Frontend tests detected: ${{ needs.changed-files.outputs.frontend-tests }}"
-          echo "Backend tests detected: ${{ needs.changed-files.outputs.backend-tests }}"
+          echo "Frontend changes detected: ${{ needs.changed-files.outputs.frontend-tests }}"
+          echo "Backend changes detected: ${{ needs.changed-files.outputs.backend-tests }}"
           echo "Build and test job status: ${{ needs.build-and-test.result }}"
           echo "Current branch: ${{ github.ref }}"
           echo "Proceeding with Docker build..."
